fix background color on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,14 @@
+html {
+   margin: 0px;
+   height: 100%;
+   width: 100%;
+}
+
 body {
-    background-color: #363636;
-    height: 100vh;
+   margin: 0px;
+   min-height: 100%;
+   width: 100%;
+   background-color: #363636;
 }
 
 .pointer-simple {
